--- a/main/src/App.css
+++ b/main/src/App.css
@@ -19,14 +19,15 @@ nav{
   min-height: 10vh;
   align-items: center;
   font-family: inter;
-  background-color: #0B9444;
+  background-color : #0B013B;
 }
 nav .logo{
-  color: #0B013B ;
+  color: #fff ;
   font-size: 25px;
   font-weight: 700;
   text-transform: uppercase;
 }
+
 nav .nav-links{
   display: flex;
   justify-content: space-around;
@@ -34,7 +35,7 @@ nav .nav-links{
   
 }
 nav .nav-links a:hover{
-  font-size: 20px;
+ 
   font-weight: normal;
-  color: #0B013B;
+  color: #0B9444;
 }
