--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -11,6 +11,7 @@
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
+
 .headerContainer {
   width: auto;
   margin-left: 50px;
@@ -47,7 +48,7 @@
 }
 
 .headerContainer button:hover {
-  background-color: #07090a;
+  background-color: #3c853a;
   cursor: pointer;
   transition: 0.3s ease-in;
 }
