--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,6 +1,5 @@
 .home {
   width: 100%;
-  height: 90vh;
   display: flex;
   justify-content: center;
   align-items: left;
@@ -8,6 +7,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   
 }
@@ -15,7 +15,10 @@
 
 .headerContainer {
   width: auto;
-  margin-left: 100px;
+  margin-left: 150px;
+  height: 600px;
+  color: aliceblue;
+  padding-top: 10%;
 }
 
 .headerContainer h1 {
@@ -24,18 +27,20 @@
   font-size: 90px;
   height: 60px;
   font-weight: 50;
-  color: black;
+  color: aliceblue;
+
 }
 
 .headerContainer p {
   padding: 0;
   font-size: 40px;
   font-weight: lighter;
-  color: black;
+  color: aliceblue;
 }
 
 .headerContainer button {
   color: black;
+  opacity: 80%;
   border: none;
   border-radius: 5px;
   cursor: pointer;
