--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -33,9 +33,9 @@
 
 .headerContainer p {
   padding: 0;
-  font-size: 40px;
   font-weight: lighter;
   color: aliceblue;
+  width: 20%;
 }
 
 .headerContainer button {
