--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,12 +1,16 @@
 .about {
   width: 100%;
-  height: 90vh;
+  height: auto;
   display: flex;
   flex-direction: column;
   background-color: rgb(231, 231, 231);
   font-weight: 100;
 }
-
+.about .videoAbout{
+ align-self: center;
+ margin-bottom: 10%;
+ margin-top: 6%;
+}
 .aboutTop {
   width: 100%;
   height: 45%;
@@ -25,7 +29,11 @@
 }
 
 .aboutBottom p {
-  width: 1200px;
+  padding-left: 20%;
+  width: 60%;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: larger;
+  color: rgb(124, 121, 121);
 }
 
 .about .aboutBottom h1 {
