--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,3 +1,4 @@
+
 .preF{
   height: 300px;
   width: 100%;
@@ -13,21 +14,24 @@
   float: left;
   height: 200px;
   width: 23%;
-  margin: 0 10px;
+  margin: 10px;
   color: #99999b;
+  
 }
 .preF .column2 {
   float: left;
   height: 200px;
   width: 23%;
-  margin: 0 10px;
+  margin: 10px;
+  margin-left: 6%;
   color: #99999b;
+ 
 }
 .preF .column3 {
   float: left;
   height: 200px;
   width: 23%;
-  padding: 0 0px;
+  
   color: #99999b;
 }
 
@@ -40,7 +44,7 @@
   padding-left: 20%;
   position: relative;
   bottom: 0;
-  width: 80%;
+  width: 100%;
   height: 100%;
   
 }
@@ -52,7 +56,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding-top: 10px;
+  
 }
 
 .socialMedia svg {
@@ -60,9 +64,12 @@
   margin: 20px;
   font-size: 70px;
   cursor: pointer;
-  
+  height: 40px;
+  width: 40px;
 }
+
 
 .footer p {
   color: white;
+ 
 }
