--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -34,7 +34,7 @@
   width: 80%;
   padding-top: 5%;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: larger;
+  font-size: 22px;
   color: rgb(124, 121, 121);
 }
 
