--- a/src/styles/Resource.css
+++ b/src/styles/Resource.css
@@ -1,9 +1,10 @@
 .resource{
     background-color: #99999b;
-    height: 70vh;
+    height: 100vh;
     background-size: cover;
     background-attachment: fixed;
     color: aliceblue;
+    
 }
 .title{
     font-size: 50px;
@@ -15,4 +16,53 @@
 .brief{
     margin-right: 35%;
     margin-top: 0%;
+     
+}
+.cards{
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    margin-left: 15%;
+    padding-top: 6% ;
+    
+}
+.Rcard1{
+    display: flex;
+    flex-direction: column;
+    width: 25%;
+    border-radius: 5%;
+    height: 400px;
+    background-color: #3c853a;
+    box-shadow: 0px 0px 15px -5px;
+    transition: 0.5s;
+    animation: ease-in-out;
+    margin: 1%;
+   
+}
+.Rcard2{
+    margin: 1%;
+    display: flex;
+    flex-direction: column;
+    width: 25%;
+    border-radius: 5%;
+    height: 400px;
+    background-color: #3c853a;
+    box-shadow: 0px 0px 15px -5px;
+    transition: 0.5s;
+    animation: ease-in-out;
+    
+}
+.Rcard3{
+    margin: 1%;
+    width: 30%;
+    border-radius: 5%;
+    display: flex;
+    flex-direction: column;
+    width: 25%;
+    height: 400px;
+    background-color: #3c853a;
+    box-shadow: 0px 0px 15px -5px;
+    transition: 0.5s;
+    animation: ease-in-out;
+   
 }
